--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
 			<li><a href="/introtocommonlaw">Intro to Common Law</a></li>
+			<li><a href="/NPD Project Mindmap">New product introduction management v7.2.html</a></li>
     		</ul>
 		</nav>
 		<div class="container">
