--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         		<li><a href="/blog">Blog</a></li>
 			<li><a href="/introtocommonlaw">Intro to Common Law</a></li>
 			<li><a href="/New product introduction management v7.2.html">NPD Project Development Process</a></li>
+			<li><a href="/Tenancy01.html">Claim your rent deposit back</a></li>
     		</ul>
 		</nav>
 		<div class="container">
