--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<li><a href="https://www.linkedin.com/in/ethanlam">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
 			<li><a href="/introtocommonlaw">Intro to Common Law</a></li>
+			<li><a href="/Investment Management.html">Investment Management</a></li>
 			<li><a href="/New product introduction management v7.2.html">NPD Project Development Process</a></li>
 			<li><a href="/Tenancy01.html">Claim your rent deposit back</a></li>
     		</ul>
