--- a/countdown.html
+++ b/countdown.html
@@ -3,6 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+h1 {
+	text-align: center;
+}
 p {
   text-align: center;
   font-size: 60px;
@@ -11,8 +14,8 @@ p {
 </style>
 </head>
 <body>
-
-<p id="demo"></p>
+<h1>Time to Leave</h1>
+<p id="countdown"></p>
 
 <script>
 // Set the date we're counting down to
@@ -33,14 +36,14 @@ var x = setInterval(function() {
     var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
     var seconds = Math.floor((distance % (1000 * 60)) / 1000);
     
-    // Output the result in an element with id="demo"
-    document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+    // Output the result in an element with id="countdown"
+    document.getElementById("countdown").innerHTML = days + "d " + hours + "h "
     + minutes + "m " + seconds + "s ";
     
     // If the count down is over, write some text 
     if (distance < 0) {
         clearInterval(x);
-        document.getElementById("demo").innerHTML = "EXPIRED";
+        document.getElementById("countdown").innerHTML = "EXPIRED";
     }
 }, 1000);
 </script>
