--- a/countdown.html
+++ b/countdown.html
@@ -5,11 +5,14 @@
 <style>
 h1 {
 	text-align: center;
+	font-size: 400%;
 }
 p {
   text-align: center;
   font-size: 60px;
   margin-top:0px;
+  color: red;
+  background-color: black;
 }
 </style>
 </head>
@@ -37,7 +40,7 @@ var x = setInterval(function() {
     var seconds = Math.floor((distance % (1000 * 60)) / 1000);
     
     // Output the result in an element with id="countdown"
-    document.getElementById("countdown").innerHTML = days + "d " + hours + "h "
+    document.getElementById("countdown").innerHTML = days + "days " + hours + "hrs "
     + minutes + "m " + seconds + "s ";
     
     // If the count down is over, write some text 
