--- a/countdown.html
+++ b/countdown.html
@@ -5,14 +5,14 @@
 <style>
 h1 {
 	text-align: center;
-	font-size: 400%;
+	font-size: 100%;
 }
 p {
   text-align: center;
-  font-size: 60px;
+  font-size: 30px;
   margin-top:0px;
   color: red;
-  background-color: black;
+  background-color: ;
 }
 </style>
 </head>
