--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 <html>
-	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111719410-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,7 +10,7 @@
 
   gtag('config', 'UA-111719410-2');
 </script>
-		<title>Ethan Lam</title>
+	<title>Ethan Lam</title>
 	</head>
 	<body>
 		<nav>
@@ -19,10 +19,11 @@
 	        	<li><a href="/about">About</a></li>
 			<li><a href="https://www.linkedin.com/in/ethanlam">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
-			<li><a href="/introtocommonlaw">Intro to Common Law</a></li>
+			<li><a href="/introtocommonlaw">Introduction to Common Law</a></li>
 			<li><a href="/Investment Management.html">Investment Management</a></li>
 			<li><a href="/New product introduction management v7.2.html">NPD Project Development Process</a></li>
-			<li><a href="/Tenancy01.html">Claim your rent deposit back</a></li>
+			<li><a href="/Tenancy01.html">Claim your rent deposit back in UK</a></li>
+			<li><a href="/site/index.html">HTML & CSS</a></li>
     		</ul>
 		</nav>
 		<div class="container">
