--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<li><a href="/Investment Management.html">Investment Management</a></li>
 			<li><a href="/New product introduction management v7.2.html">NPD Project Development Process</a></li>
 			<li><a href="/Tenancy01.html">Claim your rent deposit back in UK</a></li>
-			<li><a href="/site/index.html">HTML & CSS</a></li>
+			<li><a href="/coursera-test/site/index.html">HTML & CSS</a></li>
     		</ul>
 		</nav>
 		<div class="container">
