--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<li><a href="/New product introduction management v7.2.html">NPD Project Development Process</a></li>
 			<li><a href="/Tenancy01.html">Claim your rent deposit back in UK</a></li>
 			<li><a href="/coursera-test/site/index.html">HTML & CSS</a></li>
+			<li><a href="/restaurantonline/index.html">A Restaurant Website Demo</a></li>
     		</ul>
 		</nav>
 		<div class="container">
