--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</nav>
 		<footer>
     		<ul>
-        		<li><a href="mailto:gmail@gmail.com">email</a></li>
+        		<li><a href="mailto:ethankclam@gmail.com">email</a></li>
         		<li><a href="https://github.com/ethankclam">github.com/ethankclam</a></li>
 			</ul>
 		</footer>
