--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 	<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111719410-2"></script>
@@ -9,16 +9,17 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-111719410-2');
+ <meta charset="utf-8">
 </script>
 	<title>Ethan Lam</title>
 	</head>
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
+        	<li><a href="/">Home</a></li>
+	        <li><a href="/about">About</a></li>
 			<li><a href="https://www.linkedin.com/in/ethanlam">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        	<li><a href="/blog">Blog</a></li>
 			<li><a href="/introtocommonlaw">Introduction to Common Law</a></li>
 			<li><a href="/Investment Management.html">Investment Management</a></li>
 			<li><a href="/New product introduction management v7.2.html">NPD Project Development Process</a></li>
@@ -30,7 +31,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:ethankclam@gmail.com">email</a></li>
-        		<li><a href="https://github.com/ethankclam">github.com/ethankclam</a></li>
+        		<li><a href="https://github.com/ethankclam">Ethan's Github page</a></li>
 			</ul>
 		</footer>
 	</body>
