--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ h1,h2,h3,h4,h5,h6 {
   <div class="w3-row w3-padding-64" id="about">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
       <!--  -->
-     <img src="/w3images/tablesetting2.jpeg" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="600" height="750">
+     <img src="/w3images/tablesetting2.jpeg" class="w3-round w3-image w3-opacity-min" alt="banner" width="600" height="750">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
@@ -75,7 +75,7 @@ h1,h2,h3,h4,h5,h6 {
     </div>
     
     <div class="w3-col l6 w3-padding-large">
-      <img src="/w3images/tablesetting.jpeg" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
+      <img src="/w3images/tablesetting.jpeg" class="w3-round w3-image w3-opacity-min" alt="Portfolio" style="width:100%">
     </div>
   </div>
 
