--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ h1,h2,h3,h4,h5,h6 {
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="/w3images/hamburger.jpeg" alt="Hamburger Catering" width="1600" height="800">
+  <img class="w3-image" src="images/2018-03-020.jpg" alt="London" width="1600" height="1134">
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
     <h1 class="w3-xxlarge">Ethan</h1>
   </div>
@@ -41,7 +41,7 @@ h1,h2,h3,h4,h5,h6 {
   <div class="w3-row w3-padding-64" id="about">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
       <!--  -->
-     <img src="/w3images/tablesetting2.jpeg" class="w3-round w3-image w3-opacity-min" alt="banner" width="600" height="750">
+     <img src="images/2017-12-02175029.jpg" class="w3-round w3-image w3-opacity-min" alt="self" width="500" height="667" style="width:50%">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
@@ -75,7 +75,7 @@ h1,h2,h3,h4,h5,h6 {
     </div>
     
     <div class="w3-col l6 w3-padding-large">
-      <img src="/w3images/tablesetting.jpeg" class="w3-round w3-image w3-opacity-min" alt="Portfolio" style="width:100%">
+      <img src="images/2017-07-18.jpg" class="w3-round w3-image w3-opacity-min" alt="warwick" style="width:70%">
     </div>
   </div>
 
@@ -103,7 +103,7 @@ h1,h2,h3,h4,h5,h6 {
 <!-- Footer -->
 <footer class="w3-center w3-light-grey w3-padding-32">
   <div>
-    <div class="text-center">&copy; Copyright Ethan 2018</div>
+    <div class="text-center">&copy; Copyright Ethan Lam 2018</div>
   </div>
 </footer>
 <!-- Global site tag (gtag.js) - Google Analytics -->
