--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ h1,h2,h3,h4,h5,h6 {
   <div class="w3-row w3-padding-64" id="menu">
     <div class="w3-col l6 w3-padding-large">
       <h1 class="w3-center">Portfolio</h1><br>
-      <h4>NPD Project Development Process</h4>
+      <h4>New Product Development - Project Management</h4>
       <p class="w3-text-grey"><a href="/New product introduction management v7.2.html" target="blank">My MSc dissertation Mind Map</a></p><br>
     
       <h4>A Restaurant Website Demo</h4>
