--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ h1,h2,h3,h4,h5,h6 {
     <div class="w3-col l6 w3-padding-large">
       <h1 class="w3-center">Portfolio</h1><br>
       <h4>New Product Development - Project Management</h4>
-      <p class="w3-text-grey"><a href="/New product introduction management v7.2.html" target="blank">My MSc dissertation Mind Map</a></p><br>
+      <p class="w3-text-grey"><a href="/New product introduction management v7.2.html" target="blank">My MSc dissertation Construction</a></p><br>
     
       <h4>A Restaurant Website Demo</h4>
-      <p class="w3-text-grey"><a href="/restaurantonline/index.html" target="blank">A Restaurant Website Demo coded with HTML, CSS, & JavaScript</a></p><br>
+      <p class="w3-text-grey"><a href="/restaurantonline/index.html" target="blank">A Restaurant Website Demo with HTML, CSS, & JavaScript</a></p><br>
     
       <h4>HTML & CSS</h4>
       <p class="w3-text-grey"><a href="/coursera-test/site/index.html" target="blank">HTML & CSS demo</a></p><br>
