--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Ethan Lam</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="css/style.css">
 <style>
 body {font-family: "Times New Roman", Georgia, Serif;}
 h1,h2,h3,h4,h5,h6 {
@@ -65,7 +65,7 @@ h1,h2,h3,h4,h5,h6 {
       <p class="w3-text-grey"><a href="/restaurantonline/index.html" target="blank">A Restaurant Website Demo with HTML, CSS, & JavaScript</a></p><br>
     
       <h4>HTML & CSS</h4>
-      <p class="w3-text-grey"><a href="/coursera-test/site/index.html" target="blank">HTML & CSS demo</a></p><br>
+      <p class="w3-text-grey"><a href="/coursera-test/site/index.html" target="blank">HTML & CSS Demo</a></p><br>
     
       <h4>The Rent Deposit System in the UK</h4>
       <p class="w3-text-grey"><a href="/Tenancy01.html" target="blank">Claim your rent deposit back</a></p><br>
