--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ h1,h2,h3,h4,h5,h6 {
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#menu" class="w3-bar-item w3-button">Portfolio</a>
+      <a href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     </div>
   </div>
@@ -54,8 +54,8 @@ h1,h2,h3,h4,h5,h6 {
   
   <hr>
   
-  <!-- Menu Section -->
-  <div class="w3-row w3-padding-64" id="menu">
+  <!-- Portfolio Section -->
+  <div class="w3-row w3-padding-64" id="portfolio">
     <div class="w3-col l6 w3-padding-large">
       <h1 class="w3-center">Portfolio</h1><br>
       <h4>New Product Development - Project Management</h4>
