--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="eng">
+<head>
 <title>Ethan Lam</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="css/style.css">
 <style>
 body {font-family: "Times New Roman", Georgia, Serif;}
@@ -11,6 +13,7 @@ h1,h2,h3,h4,h5,h6 {
     letter-spacing: 5px;
 }
 </style>
+</head>
 <body>
 
 <!-- Navbar (sit on top) -->
@@ -19,9 +22,11 @@ h1,h2,h3,h4,h5,h6 {
     <a href="#home" class="w3-bar-item w3-button">Ethan's Page</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      <a href="#about" class="w3-bar-item w3-button"><span class="glyphicon glyphicon-info-sign"></span>
+        About</a>
+      <a href="#portfolio" class="w3-bar-item w3-button"><span class="glyphicon glyphicon-certificate"></span>
+Portfolio</a>
+      <a href="#contact" class="w3-bar-item w3-button"><span class="glyphicon glyphicon-envelope">Contact</a>
     </div>
   </div>
 </div>
@@ -32,6 +37,9 @@ h1,h2,h3,h4,h5,h6 {
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
     <h1 class="w3-xxlarge">Ethan</h1>
   </div>
+
+<!-- toggle -->
+
 </header>
 
 <!-- Page content -->
