--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Portfolio</a>
 
   <!-- Contact Section -->
   <div class="w3-container w3-padding-64" id="contact">
-    <h1>Contact</h1><br>
+    <h1 class="w3-center">Contact</h1><br>
     <p></p>
     <p class="w3-text-blue-grey w3-large"><b></b></p>
     <ul><a href="mailto:ethankclam@gmail.com">Email me</a></ul>
