--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@ Portfolio</a>
       <h4>HTML & CSS</h4>
       <p class="w3-text-grey"><a href="/coursera-test/site/index.html" target="blank">HTML & CSS Demo</a></p><br>
     
+      <h4>CatPhotoApp</h4>
+      <p class="w3-text-grey"><a href="sites/catphotoapp/catphotoapp.html" target="blank">CatPhotoApp</a></p><br>
+
       <h4>The Rent Deposit System in the UK</h4>
       <p class="w3-text-grey"><a href="/Tenancy01.html" target="blank">Claim your rent deposit back</a></p><br>
     
