--- a/sites/catphotoapp/catphotoapp.html
+++ b/sites/catphotoapp/catphotoapp.html
@@ -23,7 +23,7 @@
 <body>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-8">
+    <div class="col-xs-8 col-md-6">
       <h2 class="text-primary text-center">CatPhotoApp</h2>
     </div>
     <div class="col-xs-4">
