--- a/countdown.html
+++ b/countdown.html
@@ -17,12 +17,12 @@ p {
 </style>
 </head>
 <body>
-<h1>Time to Leave</h1>
+<h1>Countdown to IFL exam</h1>
 <p id="countdown"></p>
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("May 18, 2018 00:00:00").getTime();
+var countDownDate = new Date("May 17, 2018 00:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
