--- a/sites/text.html
+++ b/sites/text.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<canvas id="myCanvas"></canvas>
-	<script type="text/javascript" src="bubbles.js"></script>
+	<script type="text/javascript" src="js/bubbles.js"></script>
 <script type="text/javascript">
 var myName = "Happy Birthday! Farah!";
 var red = [0,100,50];
