--- a/sites/text.html
+++ b/sites/text.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/alphabet.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=0.5">
+	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="js/alphabet.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Happy Birthday to Farah!</title>
 </head>
 <body>
