--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Portfolio</a>
       <h1 class="w3-center">About Me</h1><br>
       <h5 class="w3-center"></h5>
       <p class="w3-large"></p>
-        <p class="w3-large w3-text-grey w3-hide-medium" style="text-align:justify">With an academic background across different fields, social science, linguistics, business, law and finance, I completed my master degree from University of Warwick. My dissertation was on new product development process of SMEs and startups. I wrote about the challenges encountered by SMEs and Startups in New Product Development and analysis on their processes. I found out the agile approach adopted by technology SMEs and Startups and recommended the customer involvement in the process of New Product Development.</p>
+        <p class="w3-large w3-text-grey w3-hide-medium" style="text-align:justify">With an academic background across different fields, social science, linguistics, business, law and finance, I completed my master degree in project management at University of Warwick. My dissertation was on new product development process of SMEs and startups. I wrote about the challenges encountered by SMEs and Startups in New Product Development and analysis on their processes. I found out the agile approach adopted by technology SMEs and Startups and recommended the customer involvement in the process of New Product Development.</p>
 <p class="w3-large w3-text-grey w3-hide-medium" style="text-align:justify">
 I worked across a wide variety of sectors, including universities, insurance, retail, real estate, e-learning, telecommunication, career training, and technology in Hong Kong, Australia, and UK.
         </p>
