--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Portfolio</a>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  
+  <img class="w3-image" src="images/2018-03-020.jpg" alt="London" width="1600" height="1134">
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
     <h1 class="w3-xxlarge">Ethan</h1>
   </div>
@@ -48,7 +48,7 @@ Portfolio</a>
   <div class="w3-row w3-padding-64" id="about">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
       <!--  -->
-     <img src="images/2017-12-02175029.jpg" class="w3-round w3-image w3-opacity-min" alt="self" width="500" height="667" style="width:50%">
+     <img src="images/2017-12-02175029.jpg" class="w3-round w3-image w3-opacity-min" alt="self" width="800" height="600" style="width:80%">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
