--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Portfolio</a>
   <div class="w3-row w3-padding-64" id="about">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
       <!--  -->
-     <img src="images/2017-12-02175029.jpg" class="w3-round w3-image w3-opacity-min" alt="self" width="800" height="600" style="width:80%">
+     <img src="images/2017-01-02 17.22.45.jpg" class="w3-round w3-image w3-opacity-min" alt="self" width="800" height="600" style="width:80%">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
