--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@ I worked across a wide variety of sectors, including universities, insurance, re
       <h4>A Restaurant Website Demo</h4>
       <p class="w3-text-grey"><a href="/restaurantonline/index.html" target="blank">A Restaurant Website Demo with HTML, CSS, & JavaScript</a></p><br>
     
+
+      <h4>Todo List App</h4>
+      <p class="w3-text-grey"><a href="/webdeveloper/todolist.html" target="blank">Todo List App</a></p><br>
+
       <h4>CatPhotoApp</h4>
       <p class="w3-text-grey"><a href="sites/catphotoapp/catphotoapp.html" target="blank">CatPhotoApp</a></p><br>
       
